# amalgam

./: .gitignore  Cargo.toml  synth-output.txt  todo.md
data/: basic_test.mid
examples/: play_from_midi.rs  play_noise.rs  play_tone.rs
src/: clock.rs  error.rs  lib.rs  main.rs  midi.rs  module.rs  modules.rs  noise.rs  note.rs  oscillator.rs  output.rs  prelude.rs  signal_logger.rs  synth.rs  util.rs
src/midi/: data.rs  error.rs  event.rs  parser.rs
src/midi/event/: channel.rs  meta.rs  system.rs
src/midi/parser/: event.rs
src/midi/parser/event/: channel.rs  meta.rs  system.rs
src/module/: attenuator.rs  attenuverter.rs  common.rs  compressor.rs  empty.rs  envelope.rs  error.rs  midi.rs  mixer.rs  noise.rs  oscillator.rs  output.rs  sample_buffer.rs  sequencer.rs  traits.rs  voice.rs
src/module/midi/: midi_mono_note.rs  midi_note.rs
src/output/: cpal_audio_output.rs  error.rs
