[package]
name = "synth"
version = "0.1.0"
authors = ["Zachary Harvie <zachary@techsoft3d.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal="0.12.1"
rand="0.7.3"

[features]
default = []
verbose = ["verbose_midi"]
verbose_midi = []