[package]
name = "amalgam"
version = "0.1.0"
authors = ["Zachary Harvie <zachary@techsoft3d.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
cpal="0.13.4"
rand="0.7.3"

[features]
default = []
verbose = ["verbose_midi"]
verbose_midi = []
audio_printing = []